Ingress-images/Deployment-catalog.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: mydpcatalog
  namespace: prod
  annotations:
    kubernetes.io/change-cause: "Deploy to catalog"
spec: 
  minReadySeconds: 5
  replicas: 6
  selector:
    matchLabels:
      app: catalog-app
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%  
  template:
    metadata:
      name: mycatalogpods
      labels:
        app: catalog-app
    spec:
      containers:
        - name: mycatalog-contianers 
          image: 017379869709.dkr.ecr.ap-south-1.amazonaws.com/prod/images:catalog 
          ports:
            - containerPort: 80
          imagePullPolicy: Always
