Ingress-images/Service-Catalog.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: mysvcdp-catalog

spec: 
  type: ClusterIP
  selector:
      app: catalog-app
  ports:
    - port: 80
