Ingress-images/Service-Zayshop.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: mysvcdp-zayshop
  namespace: prod
spec: 
  type: ClusterIP
  selector:
      app: zayshop-app
  ports:
    - port: 80
