Ingress-images/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-prod-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internal-facing
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
spec: 
  ingressClassName: alb 
  rules:
    - http: 
       paths:
         - path: /zayshop 
           pathType: Prefix
           backend: 
             service: 
               name: mysvcdp-zayshop
               port:
                number: 80
         - path: /catalog 
           pathType: Prefix
           backend:
            service:
              name: mysvcdp-catalog
              port:
                number: 80
